Refactoring to new Scala compiler plugin.